--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "Back-end-project-fullstack",
+  "name": "back-end-project-fullstack",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/app/server",
   "scripts": {
+    "dev": "nodemon .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +20,7 @@
   "homepage": "https://github.com/PeryclesReis/Back-end-project-fullstack#readme",
   "dependencies": {
     "body-parser": "1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "8.2.0",
     "express": "4.17.1",
     "express-rescue": "1.1.30",
