--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/PeryclesReis/Back-end-project-fullstack#readme",
   "dependencies": {
+    "axios": "^0.24.0",
     "body-parser": "1.19.0",
     "cors": "^2.8.5",
     "dotenv": "8.2.0",
@@ -27,7 +28,7 @@
     "frisby": "2.1.2",
     "jest": "26.4.1",
     "joi": "^17.5.0",
-    "jsonwebtoken": "8.5.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
     "multer": "1.4.2",
     "nodemon": "2.0.4",
