--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "joi": "^17.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "3.5.9",
-    "multer": "1.4.2",
-    "nodemon": "2.0.4",
     "shelljs": "0.8.4"
   },
   "devDependencies": {
@@ -41,6 +39,7 @@
     "mocha": "9.0.0",
     "mongodb-memory-server": "^6.9.6",
     "nyc": "15.1.0",
-    "sinon": "11.1.1"
+    "sinon": "11.1.1",
+    "nodemon": "2.0.4"
   }
 }
